--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gsi-app",
+  "name": "cultura",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,16 @@
     "@popperjs/core": "^2.11.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "boxicons": "^2.1.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.14",
+    "vue": "^2.7.7",
     "vue-axios": "^3.4.0",
-    "vue-pdf": "^4.3.0",
+    "vue-plyr": "^7.0.0",
     "vue-router": "^3.2.0",
+    "vue-server-renderer": "^2.7.7",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.4.0"
   },
@@ -33,6 +35,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.7.7"
   }
 }
